# tell-dont-ask

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  mixins.py  pyproject.toml
sales_service/: models.py  repositories.py  service.py
tests/watering_service/: test_models.py  test_service.py
watering_service/: models.py  repositories.py  service.py
